# model-quant

./: .gitignore  .gitmodules  README.md  eslint.config.js  handoff.md  package-lock.json  package.json  playwright.config.ts  reset-gpqa-env.ps1  tailwind.config.js
evals/: lm_eval_subset.generated.json  lm_eval_subset.quick.generated.json  smoke_texts.json  standard_subset.json
native/cpp/: CMakeLists.txt  README.md
native/cpp/model_surgery_runtime/: CMakeLists.txt
native/cpp/model_surgery_runtime/include/: model_surgery_runtime.h
native/cpp/model_surgery_runtime/src/: model_surgery_runtime.cpp
native/cpp/model_surgery_runtime/tests/: runtime_quant_tests.cpp
native/cpp/model_surgery_runtime/tools/: probe.cpp
native/cpp/patches/: llama-user-model-optional-tensors.patch
scripts/: lm-eval-subset.mjs  lm-eval-subset.test.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/cpp-profiling/: profiler.cpp  profiler.h  profiler_stub.cpp
src-tauri/examples/: dump_gguf.rs
src-tauri/src/: lib.rs  main.rs  progress.rs
src-tauri/src/commands/: eval_backend.rs  export.rs  hardware.rs  mod.rs  model.rs  modelinspector_api.rs  official_benchmarks.rs  quant.rs
src-tauri/src/ffi/: bindings.rs  mod.rs  profiler_bindings.rs  runtime_bindings.rs
src-tauri/src/gguf/: reader.rs  types.rs
src-tauri/src/profile/: benchmark.rs
src-tauri/src/quant/: engine.rs  mod.rs  preflight.rs  recipe.rs
src-tauri/tests/: hardware_snapshot_test.rs  integration_test.rs  preflight.rs
src/components/: AppShell.tsx  TitleBar.tsx
src/components/DetailPanel/: DetailPanel.tsx  ProfilePanel.tsx  TensorTable.tsx
src/components/EvalResults/: EvalResultsView.tsx
src/components/LayerBrowser/: BulkAssignPanel.tsx  LayerBrowser.tsx  LayerTree.tsx  SearchBar.tsx
src/components/TestResultsModal/: LatencyTable.tsx  SaveOrDiscard.tsx  TestResultsModal.tsx  VRAMChart.tsx
src/components/Toolbar/: ModelPicker.tsx  ProgressBar.tsx  QuantPresetMenu.tsx  RecipeControls.tsx  TestButton.tsx  Toolbar.tsx
src/components/Workbench/: ActivityBar.tsx  BottomPanel.tsx  EditorPane.tsx  EditorTabs.tsx  ExplorerPanel.tsx  ExplorerTree.tsx  HardwarePanel.tsx  LayerTabs.tsx  RunControls.tsx  StatusBar.tsx  TestingPanel.tsx  WorkbenchShell.tsx  editorTabModel.ts
src/hooks/: useBenchmarkOutputLog.ts  useModel.ts  useProgress.ts  useRecipe.ts
src/lib/: format.ts  tauri-bridge.ts  window-controls.ts
src/types/: index.ts
tests/e2e/: smoke.spec.ts
tests/mocks/: tauri-bridge.ts
tests/unit/: activity-icons.spec.ts  bulk-assign.spec.ts  command-center.spec.ts  eval-results-editor.spec.ts  export.spec.ts  hardware-panel.spec.ts  layer-select.spec.ts  layer-tab-overflow.spec.ts  layout-containment.spec.ts  model-load.spec.ts  output-log.spec.ts  quant-assign.spec.ts  recipe-save.spec.ts  test-modal.spec.ts  workbench-resize.spec.ts
