[package]
name = "model-surgery"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "1"
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
sysinfo = "0.37"
nvml-wrapper = "0.12"

[features]
llama = []
